--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body>
     <header>
         <div class="container">
-            <h2 class="logo">LUCIFLIX</h2>
+            <h2 class="logo">iÁlvaro</h2>
             <nav>
                 <a href="index.html">Início</a>
-                <a href="index.html">Séries</a>
-                <a href="index.html">Filmes</a>
-                <a href="index.html">Documentários</a>
+                <a href="index.html">Portfólio</a>
+                <a href="index.html">Contato</a>
+                <a href="index.html">Sobre</a>
             </nav>
 
         </div>
@@ -29,10 +29,10 @@
     <main>
         <div class="filme-principal">
             <div class="container">
-                <h3 class="titulo">Lucifer</h3>
-                <p class="descricao">Entediado com a vida nas trevas, o diabo se muda para Los Angeles, abre um
-                    piano-bar e empresta sua sabedoria a uma investigadora de assassinatos. Além de passar o tempo todo
-                    dizendo que é o próprio diabo e ninguém acreditar nele.</p>
+                <h3 class="titulo">iÁlvaro</h3>
+                <p class="descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi totam doloremque 
+                    debitis sit? Excepturi explicabo temporibus maxime possimus corporis repellat deserunt quisquam 
+                    optio molestias autem commodi quod, fugiat debitis numquam!</p>
                 <div class="botoes">
                     <button role="button" class="botao">
                         <i class="fas fa-play"></i>
