--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
         <div class="filme-principal">
             <div class="container">
                 <h3 class="titulo">iÁlvaro</h3>
-                <p class="descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi totam doloremque 
-                    debitis sit? Excepturi explicabo temporibus maxime possimus corporis repellat deserunt quisquam 
-                    optio molestias autem commodi quod, fugiat debitis numquam!</p>
+                <p class="descricao">Olá, meu nome é Álvaro, sou paixonado por tecnologia, sempre trabalhei com help-desk, posteriormente
+                     me formei em Sistemas de Informação em 2017, atuei em grandes empresas como Fox Sports e 
+                     Caixa Econônica Federal.
+                     Atualmente estou me voltando para o desenvolvimento Web por ser um sonho antigo de trabalho,
+                     e de poder atingir mais pessoas através do desenvolvimento.
+
+                </p>
                 <div class="botoes">
                     <button role="button" class="botao">
                         <i class="fas fa-play"></i>
